--- a/index.html
+++ b/index.html
@@ -8,6 +8,58 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="navbar">
+		<h1 class="logo">Анкета</h1>
+		<div class="navbar__inner">
+			<ul class="status-bar">
+				<li class="status-bar__item">
+					<a href="#qa_1" class="status-bar__link">1</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_2" class="status-bar__link">2</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_3" class="status-bar__link">3</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_4" class="status-bar__link">4</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_5" class="status-bar__link">5</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_6" class="status-bar__link">6</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_7" class="status-bar__link">7</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_8" class="status-bar__link">8</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_9" class="status-bar__link">9</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_10" class="status-bar__link">10</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_11" class="status-bar__link">11</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_12" class="status-bar__link">12</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_13" class="status-bar__link">13</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_14" class="status-bar__link">14</a>
+				</li>
+				<li class="status-bar__item">
+					<a href="#qa_15" class="status-bar__link">15</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
