--- a/index.html
+++ b/index.html
@@ -60,6 +60,248 @@
 			</ul>
 		</div>
 	</div>
+	<div class="qa-item qa-item-hide">Свернуть</div>
+	<div class="page">
+		<div class="page__inner">
+			<div class="status-line"></div>
+			<form class="form" method="post" action="/shri-2013/">
+				<ul class="qa-list">
+					<li id="qa_1" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_1"><i>Вопрос 1</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Год рождения.</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="1" cols="80" name="q_1" id="q_1"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_2" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_2"><i>Вопрос 2</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Город, в котором вы живёте.</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="1" cols="80" name="q_2" id="q_2"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_3" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_3"><i>Вопрос 3</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Вуз, факультет, специальность, кафедра.</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="2" cols="80" name="q_3" id="q_3"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_4" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_4"><i>Вопрос 4</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Год окончания вуза.</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="1" cols="80" name="q_4" id="q_4"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_5" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_5"><i>Вопрос 5</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Уровень владения английским языком:</p></b>
+							</div>
+							<div class="answer">
+								<input type="checkbox" name="q_5_1" value="1" class="answer__checkbox" id="q_5_1">
+								<label for="q_5_1">начальный;</label><br>
+								<input type="checkbox" name="q_5_2" value="2" class="answer__checkbox" id="q_5_2">
+								<label for="q_5_2">средний;</label><br>
+								<input type="checkbox" name="q_5_3" value="3" class="answer__checkbox" id="q_5_3">
+								<label for="q_5_3">свободное владение.</label><br>
+								<textarea class="answer__textarea" rows="2" cols="80" name="q_5" id="q_5"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_6" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_6"><i>Вопрос 6</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Чего вы ожидаете от участия в Школе?</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="4" cols="80" name="q_6" id="q_6"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_7" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_7"><i>Вопрос 7</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Откуда вы о нас узнали?</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="2" cols="80" name="q_7" id="q_7"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_8" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_8"><i>Вопрос 8</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Сколько времени вы были бы готовы уделять стажировке или работе в Яндексе?</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="2" cols="80" name="q_8" id="q_8"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_9" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_9"><i>Вопрос 9</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Расскажите о вашем опыте разработки. Нам будет интересно всё — как серьезный интерфейс, так и просто домашняя страничка.</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="6" cols="80" name="q_9" id="q_9"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_10" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_10"><i>Вопрос 10</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Если вы где-нибудь работали, расскажите, какие у вас были должностные обязанности и был ли опыт работы в команде.</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="6" cols="80" name="q_10" id="q_10"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_11" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_11"><i>Вопрос 11</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Перечислите, какими программными продуктами вы пользуетесь в своей работе — от редактора до специализированных утилит (Intellij Idea, Node.js, Uglify.js, GNU Make). Для каждого инструмента укажите, какие задачи вы с помощью него решаете и почему выбрали именно его.</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="6" cols="80" name="q_11" id="q_11"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_12" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_12"><i>Вопрос 12</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Пользуетесь ли вы командной строкой? Какими командами вы пользуетесь и какие задачи вы решаете с их помощью? С какими программами вы преимущественно или полностью взаимодействуете через интерфейс командной строки?</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="6" cols="80" name="q_12" id="q_12"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_13" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_13"><i>Вопрос 13</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b><p>Напишите на JavaScript функцию, которая выводит список всех чисел, которые равны сумме факториалов своих цифр. Пример такого числа:</p></b>
+								<p>4! + 0! + 5! + 8! + 5! = 40585</p>
+								<b><p>В качестве ответа на вопрос пришлите ссылку на <a href="http://jsfiddle.net/">http://jsfiddle.net/</a> с вашим кодом или на ваш репозиторий на https://github.com/.</p></b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="1" cols="80" name="q_13" id="q_13"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_14" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_14"><i>Вопрос 14</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b>
+									<p>Вы — пилот грузового межгалактического корабля. Ваша работа — перевозка грузов с одной планету на другую. Грузоподъемность вашего корабля ограничена, поэтому за один рейс вы можете перевезти не более N кг полезного груза. Ваш корабль умеет сообщать свое состояние (местоположение и степень загруженности), а также летать в любую точку пространства. Каждая планета может содержать на себе груз, который можно взять. Также на каждой планете груз можно оставить .</p>
+									<p>Задание</p>
+									<p>Даны незавершенные интерфейсы корабля и планеты. Напишите недостающий код.</p>
+									<p>Полное условие задачи доступно на</p>
+									<p><a href="https://github.com/yandex-shri/introtask-space.">https://github.com/yandex-shri/introtask-space.</a></p>
+									<p>В качестве ответа на вопрос пришлите ссылку на http://jsfiddle.net/ с вашим кодом или на ваш репозиторий на https://github.com/.
+									</p>
+								</b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="1" cols="80" name="q_14" id="q_14"></textarea>
+							</div>
+						</div>
+					</li>
+					<li id="qa_15" class="qa-list__item">
+						<div class="qa-list__number">
+							<label for="q_15"><i>Вопрос 15</i></label>
+						</div>
+						<div class="qa-list__body">
+							<div class="question">
+								<b>
+									<p>Сверстайте форму-анкету с нашими заданиями для кандидатов. Страница должна работать в следующих браузерах: MSIE (8, 9, 10), Google Chrome (26, 27), Firefox (20, 21), Opera (12.15, 12.14), Яндекс.Браузер 1.5. По возможности используйте приёмы безопасной деградации CSS. Страница должна содержать интерактив, реализованный с помощью JS и jQuery. Это может быть:</p>
+									<ul>
+										<li>проверка полноты и правильности заполнения полей (где это возможно);</li>
+										<li>возможность свернуть и развернуть разделы (аккордеон);</li>
+										<li>индикатор заполнения анкеты;</li>
+										<li>что-нибудь ещё.</li>
+									</ul>
+									<p>Подумайте над тем, как эти данные будут отправляться на сервер.</p>
+									<p>Будет плюсом, если вы сверстаете страницу, используя БЭМ.</p>
+									<p>Дополнительные задания</p>
+									<ol>
+										<li>Выполните задание про форму-анкету, используя один из классических шаблонизаторов: Handlebars, mustache, Dust, Jade и т.п.</li>
+										<li>Выполните задание про форму-анкету, используя один из экзотических шаблонизаторов: XSLT, YATE, BEMHTML и т.п.</li>
+									</ol>
+									<p>Разработку необходимо вести на https://github.com/. В качестве ответа на вопрос пришлите ссылку на проект.</p>
+								</b>
+							</div>
+							<div class="answer">
+								<textarea class="answer__textarea" rows="1" cols="80" name="q_15" id="q_15"></textarea>
+							</div>
+						</div>
+					</li>
+				</ul>
+				<div class="form-submit">
+					<input type="submit" name="submit" id="submit" value="Отправить">
+					<input type="reset" value="Очистить">
+					<div class="form-submit__message"></div>
+				</div>
+			</form>
+		</div>
+	</div>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
