--- a/index.html
+++ b/index.html
@@ -302,6 +302,10 @@
 			</form>
 		</div>
 	</div>
+	<div class="footer">
+		<div class="footer__inner">Анкета второй Школы разработки интерфейсов в Москве, 2013 год</div>
+	</div>
+	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
